[package]
name = "pnl_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
ndarray = "0.15"
ndarray-stats = "0.4"
linregress = "0.2"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
